--- a/public/css/styles_coming.css
+++ b/public/css/styles_coming.css
@@ -1,114 +1,179 @@
 @font-face {
-    font-family: 'n27regular';
-    src: url('/fonts/n27-regular-webfont.eot');
-    src: url('/fonts/n27-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/n27-regular-webfont.woff2') format('woff2'),
-         url('/fonts/n27-regular-webfont.woff') format('woff'),
-         url('/fonts/n27-regular-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'n27regular';
+  src: url('/fonts/n27-regular-webfont.eot');
+  src: url('/fonts/n27-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/n27-regular-webfont.woff2') format('woff2'),
+       url('/fonts/n27-regular-webfont.woff') format('woff'),
+       url('/fonts/n27-regular-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+  header {
+  text-align: center;
+}
+
+.logo-header {
+  max-width: 3%;
+  padding-top: 3%;
+}
+
+
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
+
+.vertical-menu {
+  padding-top: 5%;
+}
+
+.vertical-menu a {
+  font-family: "n27regular"; 
+  text-align: center;
+  font-size: 20px;
+  padding: 8px;
+  text-decoration: none;
+  color: #333;
+  display: block;
+}
+
+.vertical-menu a:hover {
+  text-decoration: underline;
+}
+
+.content {
+  font-family: "n27regular";
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  margin-left: -5%;
+}
+
+
+.mensaje {
+  font-size: 50px;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  margin-left: -3%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ footer {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.footer-section {
+  color: black;
+  text-decoration: none;
+  font-size: 10px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bruma {
+  max-width: 30%;
+  height: auto;
+}
+
+.username{
+  font-family: "n27regular"; 
+  margin-left: 20px;
+}
+.año {
+  font-family: "n27regular"; 
+  color: black;
+  text-decoration: none;
+}
+
+.año2 {
+  color: black;
+  text-decoration: none;
+}
+
+
+.instagram-icon {
+  max-width: 25px; 
+  height: auto;
+}
+
+
+@media screen and (max-width: 768px) {
+
+  .logo-header{
+    max-width: 12%;
+  padding-top: 8%;
   }
-  
-  body, html {
-    height: 100%;
-    margin: 0;
-  }
-  
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 85vh;
-  }
-  
-  
-  
-  .container {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
-  
+
   .content {
-    text-align: center;
+    margin-left: 0;
+    margin-top: 20%;
+    margin-bottom: 20%;
   }
-  
-  .logo-bruma {
-    max-width: 30%; 
-    height: auto;
+
+  .vertical-menu a { 
+    font-size: 15px;
   }
-  
-  
-  .mensaje {
-    font-family: "n27regular"; 
-    font-weight: normal;
-    font-size: 60px;
-    margin-top: 60px;
+  .container {
+      flex-direction: column;
+      align-items: center;
   }
-  
-  
-  .instagram-icon {
-    max-width: 40px; 
-    height: auto;
+
+  .vertical-menu {
+      width: 100%;
+      order: -1;
+      margin-top: 10px;
   }
-  
-  
-  
-  footer {
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+
+  .product {
+    margin-bottom: 0;
   }
-  
-  .footer-section {
-    color: black;
-  
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .bruma {
-    max-width: 30%;
-    height: auto;
-  }
-  
-  .username{
-    font-family: "n27regular"; 
-    margin-left: 20px;
-  }
+
   .año {
-    font-family: "n27regular"; 
+    font-size: 8px;
+  }
+
+  .instagram-icon {
+    max-width: 15px;
+    height: auto;
+  }
+
+  .bruma {
+    max-width: 60%;
+    height: auto;
+  }
+
+  .mensaje {
+    font-size: 45px;
   }
   
-  
-  
-  @media (max-width: 600px) {
-  
-    .wrapper {
-      min-height: 75vh;
-    }
-    
-    footer {
-      display: block;
-      text-align: center;
-    }
-  
-    .footer-section {
-      margin: 1vh 0;
-    }
-  
-    .bruma{
-      margin-top: 5%;
-      margin-bottom: 5%;
-      max-width: 50%;
-  
-    }
-  
-    .año{
-      font-size: 10 px;
-    }
-  }
+}
