--- a/src/views/coming.ejs
+++ b/src/views/coming.ejs
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bruma</title>
-  <link rel="stylesheet" href="/css/styles_coming.css">
-  <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bruma</title>
+    <link rel="stylesheet" href="/css/styles_coming.css">
+    <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
 </head>
 <body>
-  <div class="wrapper">
+    <header>
+        <img src="/images/logo.svg" class="logo-header" alt="logo-bruma">
+    </header>
+
     <div class="container">
-      <div class="content">
-        <img src="/images/logo.svg" class="logo-bruma" alt="logo-bruma">
-        <div class="mensaje">
-          COMING SOON
+        <nav class="vertical-menu">
+            <a href="/">BRUMA</a>
+            <a href="/scented-candles"> SCENTED CANDLES</a>
+            <a href="/perfumes" style="text-decoration: underline"> PERFUMES</a>
+            <a href="/contact">CONTACT US</a>
+        </nav>
+
+        <div class="content">
+
+          <div class="content">
+            <div class="mensaje">
+              COMING SOON
+            </div>
+          </div>
+
+
+
+
         </div>
-      </div>
     </div>
-  </div>
-  <hr width="80%;" color="black"> 
-  <footer>
-    <div class="footer-section">
-      <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
 
-      <div>
-        <span class="username">bruma_perfume</span>
-      </div>
-    </div>
-    <div class="footer-section">
-      <img src="/images/bruma.svg" class="bruma" alt="bruma">
-    </div>
-    <div class="footer-section">
-      <div class="año">
-        &copy; 2023 by BRUMA
-      </div>
-    </div>
-  </footer>
+    <hr width="80%;" color="black"> 
 
+    <footer>
+        <div class="footer-section">
+            <div class="año">
+                &copy; 2023 by BRUMA
+            </div>
+        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
+        </div>
+        <div class="footer-section">
+          <img src="/images/bruma.svg" class="bruma" alt="bruma">
+        </div>
+        <div class="footer-section">
+          <div class="año">
+            <a class="año2" href="">PRIVACY POLICY
+            </a>&nbsp;|
+            <a class="año2" href="">DISCLAIMER</a>          
+          </div>
+        </div>
+    </footer>
 
 </body>
 </html>
