--- a/src/views/coming.ejs
+++ b/src/views/coming.ejs
@@ -15,7 +15,7 @@
         <nav class="vertical-menu">
             <a href="/">BRUMA</a>
             <a href="/scented-candles"> SCENTED CANDLES</a>
-            <a href="/perfumes" style="text-decoration: underline"> PERFUMES</a>
+            <a href="/perfumes"> PERFUMES</a>
             <a href="/contact">CONTACT US</a>
         </nav>
 
