--- a/src/views/perfume.ejs
+++ b/src/views/perfume.ejs
@@ -27,7 +27,7 @@
                         <!-- <img src="/images/001/0001.jpg" alt="003" class="secondary-image">                    </a> -->
                 </div>
                 <div class="product-info">
-                    <a href="http://localhost:3000/001" style="color: black; text-decoration: none;">
+                    <a href="/001" style="color: black; text-decoration: none;">
                         <h2>001</h2>
                     </a>
                 </div>
@@ -40,7 +40,7 @@
                         <!-- <img src="/images/002/0002.jpg" alt="003" class="secondary-image">                    </a> -->
                 </div>
                 <div class="product-info">
-                    <a href="http://localhost:3000/002" style="color: black; text-decoration: none;">
+                    <a href="/002" style="color: black; text-decoration: none;">
                     <h2>002</h2>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                         <!-- <img src="/images/003/0003.jpg" alt="003" class="secondary-image">                    </a> -->
                 </div>
                 <div class="product-info">
-                    <a href="http://localhost:3000/002" style="color: black; text-decoration: none;">
+                    <a href="/002" style="color: black; text-decoration: none;">
                     <h2>003</h2>
                 </div>
             </div>
