--- a/src/views/003.ejs
+++ b/src/views/003.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Bruma</title>
     <link rel="stylesheet" href="/css/styles_product.css">
     <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+
 </head>
 <body>
     <header>
@@ -23,7 +24,7 @@
             <div class="product">
                 <div class="product-images">
                     <a>
-                        <img src="/images/003/03.jpg" alt="003">
+                        <img src="/images/001/01.jpg" alt="003">
                     </a>
                     <div class="alternate-images">
                         <img src="/images/003/03.jpg" alt="003">
@@ -31,7 +32,7 @@
                     </div>
                 </div>
                 <div class="product-info">
-                    <h2>003</h2>
+                    <h2>001</h2>
                     <p class="description">Tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius duis at consectetur lorem donec massa sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi.</p>
                     <button class="buy-button">COMPRAR</button>
                 </div>
@@ -63,18 +64,14 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            // Obtiene la imagen principal y las imágenes alternativas
             const mainImage = document.querySelector('.product img');
             const alternateImages = document.querySelectorAll('.alternate-images img');
     
-            // Añade un evento de clic a cada imagen alternativa
             alternateImages.forEach(function (alternateImage) {
                 alternateImage.addEventListener('click', function () {
-                    // Cambia la imagen principal al hacer clic en la imagen alternativa
                     mainImage.src = alternateImage.src;
                     mainImage.alt = alternateImage.alt;
     
-                    // Ajusta la opacidad y el borde de las imágenes alternativas
                     alternateImages.forEach(function (img) {
                         if (img === alternateImage) {
                             img.classList.add('selected');
