Added href and fixed views

--- a/src/views/perfume.ejs
+++ b/src/views/perfume.ejs
@@ -22,7 +22,7 @@
         <div class="content">
             <div class="product">
                 <div class="product-images">
-                    <a>
+                    <a href="/001">
                         <img src="/images/001/01.jpg" alt="003" class="main-image" data-secondary-image="/images/003/secondary.jpg">
                         <!-- <img src="/images/001/0001.jpg" alt="003" class="secondary-image">                    </a> -->
                 </div>
@@ -35,7 +35,7 @@
 
             <div class="product">
                 <div class="product-images">
-                    <a>
+                    <a href="/002">
                         <img src="/images/002/02.jpg" alt="003" class="main-image" data-secondary-image="/images/003/secondary.jpg">
                         <!-- <img src="/images/002/0002.jpg" alt="003" class="secondary-image">                    </a> -->
                 </div>
@@ -47,12 +47,11 @@
 
             <div class="product">
                 <div class="product-images">
-                    <a>
+                    <a href="/003">
                         <img src="/images/003/03.jpg" alt="003" class="main-image" data-secondary-image="/images/003/secondary.jpg">
-                        <!-- <img src="/images/003/0003.jpg" alt="003" class="secondary-image">                    </a> -->
                 </div>
                 <div class="product-info">
-                    <a href="/002" style="color: black; text-decoration: none;">
+                    <a href="/003" style="color: black; text-decoration: none;">
                     <h2>003</h2>
                 </div>
             </div>
@@ -80,14 +79,6 @@
           </div>
         </div>
     </footer>
-    <script>
-        $(document).ready(function () {
-            $('.main-image').hover(function () {
-                $(this).next('.secondary-image').css('opacity', '1');
-            }, function () {
-                $(this).next('.secondary-image').css('opacity', '0');
-            });
-        });
-    </script>
+
 </body>
 </html>
