--- a/src/views/002.ejs
+++ b/src/views/002.ejs
@@ -9,9 +9,10 @@
 </head>
 <body>
     <header>
-        <img src="/images/logo.svg" class="logo-header" alt="logo-bruma">
-    </header>
-
+        <a href="/"  class="logo-header">
+          <img src="/images/logo.svg" class="logo-header" alt="logo-bruma">
+        </a>   
+      </header>
     <div class="container">
         <nav class="vertical-menu">
             <a href="/">BRUMA</a>
@@ -47,8 +48,10 @@
             <div class="año">
                 &copy; 2023 by BRUMA
             </div>
-        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/bruma_perfume/" style="display: contents;">
           <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
+        </a>
         </div>
         <div class="footer-section">
           <img src="/images/bruma.svg" class="bruma" alt="bruma">
