--- a/src/views/coming.ejs
+++ b/src/views/coming.ejs
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
+      <a href="/"  class="logo-header">
         <img src="/images/logo.svg" class="logo-header" alt="logo-bruma">
+      </a>   
     </header>
 
     <div class="container">
@@ -40,8 +42,10 @@
             <div class="año">
                 &copy; 2023 by BRUMA
             </div>
-        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/bruma_perfume/" style="display: contents;">
           <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
+        </a>
         </div>
         <div class="footer-section">
           <img src="/images/bruma.svg" class="bruma" alt="bruma">
