--- a/src/views/002.ejs
+++ b/src/views/002.ejs
@@ -16,8 +16,8 @@
     <div class="container">
         <nav class="vertical-menu">
             <a href="/">BRUMA</a>
-            <a href="/scented-candles"> SCENTED CANDLES</a>
             <a href="/perfumes" style="text-decoration: underline"> PERFUMES</a>
+            <a href="/collabs"> COLLABS</a>
             <a href="/contact">CONTACT US</a>
         </nav>
 
