--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -16,15 +16,15 @@
     <div class="container">
         <nav class="vertical-menu">
             <a href="/">BRUMA</a>
-            <a href="/scented-candles"> SCENTED CANDLES</a>
-            <a href="/perfumes" style="text-decoration: underline"> PERFUMES</a>
+            <a href="/perfumes"> PERFUMES</a>
+            <a href="/collabs"> COLLABS</a>
             <a href="/contact">CONTACT US</a>
         </nav>
 
         <div class="content">
             <div class="product">
                 <div class="product-images">
-                    <a href="/001">
+                    <a href="/perfumes/001">
                         <img src="/images/001/01.jpg" alt="003" class="main-image" data-secondary-image="/images/003/secondary.jpg">
                         <!-- <img src="/images/001/0001.jpg" alt="003" class="secondary-image">                    </a> -->
                 </div>
@@ -37,7 +37,7 @@
 
             <div class="product">
                 <div class="product-images">
-                    <a href="/002">
+                    <a href="/perfumes/002">
                         <img src="/images/002/02.jpg" alt="003" class="main-image" data-secondary-image="/images/003/secondary.jpg">
                         <!-- <img src="/images/002/0002.jpg" alt="003" class="secondary-image">                    </a> -->
                 </div>
@@ -49,7 +49,7 @@
 
             <div class="product">
                 <div class="product-images">
-                    <a href="/003">
+                    <a href="/perfumes/003">
                         <img src="/images/003/03.jpg" alt="003" class="main-image" data-secondary-image="/images/003/secondary.jpg">
                 </div>
                 <div class="product-info">
