--- a/public/css/styles_coming.css
+++ b/public/css/styles_coming.css
@@ -33,6 +33,7 @@ body, html {
 
 .vertical-menu {
   padding-top: 5%;
+  padding-left: 5%;
 }
 
 .vertical-menu a {
@@ -55,7 +56,7 @@ body, html {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -137,6 +138,7 @@ body, html {
     margin-left: 0;
     margin-top: 10%;
     margin-bottom: 10%;
+    width: 100%;
   }
 
   .vertical-menu a { 
@@ -151,6 +153,7 @@ body, html {
       width: 100%;
       order: -1;
       margin-top: 10px;
+      padding-left: 0;
   }
 
   .product {
@@ -173,6 +176,7 @@ body, html {
 
   .mensaje {
     font-size: 45px;
+    margin-left: 0;
   }
   
 }
