--- a/public/css/styles_contact.css
+++ b/public/css/styles_contact.css
@@ -33,6 +33,7 @@ body, html {
 
 .vertical-menu {
   padding-top: 5%;
+  padding-left: 5%;
 }
 
 .vertical-menu a {
@@ -54,7 +55,7 @@ body, html {
   flex-grow: 1;
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -203,6 +204,7 @@ font-weight: bold;
   .content {
     margin-left: 0;
     display: block;
+    width: 100%;
   }
 
   .vertical-menu a {
@@ -218,6 +220,7 @@ font-weight: bold;
     width: 100%;
     order: -1;
     margin-top: 10px;
+    padding-left: 0;
   }
 
   .año {
