--- a/public/css/styles_product.css
+++ b/public/css/styles_product.css
@@ -33,6 +33,7 @@
   
   .vertical-menu {
     padding-top: 5%;
+    padding-left: 5%;
   }
   
   .vertical-menu a {
@@ -55,7 +56,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     margin-left: -5%;
 }
@@ -194,6 +195,7 @@
 
     .content {
       margin-left: 0;
+      width: 100%;
     }
 
     .vertical-menu a { 
