--- a/src/views/disclaimer.ejs
+++ b/src/views/disclaimer.ejs
@@ -58,7 +58,7 @@
           <div class="año">
             <a class="año2" href="">PRIVACY POLICY
             </a>&nbsp;|
-            <a class="año2" href="" style="text-decoration: underline" >DISCLAIMER</a>          
+            <a class="año2" href="/disclaimer" style="text-decoration: underline" >DISCLAIMER</a>          
           </div>
         </div>
     </footer>
