--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Bruma</title>
-    <link rel="stylesheet" href="/css/styles_coming.css">
+    <link rel="stylesheet" href="/css/styles_home.css">
     <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
 </head>
 <body>
@@ -24,8 +24,28 @@
         <div class="content">
 
           <div class="content">
+            <img src="/images/home.png" style="width: 60%;">
+
             <div class="mensaje">
-              COMING SOON
+                <h3>Nuestros sentidos nos guían a través de la vida y experimentan historias con nosotros.
+                </h3>
+                <h3>¿Qué harías si pudieras embotellar el tiempo?
+
+                </h3>
+                <h3>Al igual que un museo, nuestros frascos de perfume son salas de exposición de recuerdos. La fragancia es una pintura incolora. Pinta una imagen del paisaje y de los sentimientos de la vida: un estado de ánimo que podes llevar.
+
+                </h3>
+                <h3>Rocíalo y abrí una puerta a la memoria. Despertá la viveza de alguien, de un lugar, de un día.
+                </h3>
+                <h3>El olor es una forma de belleza que no se puede ver con los ojos, al igual que las cosas reales de la vida.
+                </h3>
+                <h3>Con cada botella hecha y empaquetada a mano, aspiramos a ofrecer sencillez, un espacio tranquilo para experimentar la serenidad y la belleza. Esperamos brindarte una sensación de paz al abandonar la complejidad y elegir la simplicidad.
+                </h3>
+                <h3>En medio del bullicio, se puede sentir la calidez y pureza del trabajo artesanal.
+                </h3>
+                <h3>Abrí una botella, revive un recuerdo, y no olvides respirar; entonces empiezas a ver la perfección porque la BRUMA ya se desvaneció.
+                </h3>
+                <h3>Esta es nuestra historia. ¿Cuál es la tuya?</h3>
             </div>
           </div>
 
