--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -79,7 +79,7 @@
           <div class="año">
             <a class="año2" href="">PRIVACY POLICY
             </a>&nbsp;|
-            <a class="año2" href="">DISCLAIMER</a>          
+            <a class="año2" href="/disclaimer">DISCLAIMER</a>          
           </div>
         </div>
     </footer>
