Fixed <a> and added home

--- a/src/views/002.ejs
+++ b/src/views/002.ejs
@@ -17,7 +17,7 @@
         <nav class="vertical-menu">
             <a href="/">BRUMA</a>
             <a href="/perfumes" style="text-decoration: underline"> PERFUMES</a>
-            <a href="/collabs"> COLLABS</a>
+            <a href="/collabs"> COLLABORATION</a>
             <a href="/contact">CONTACT US</a>
         </nav>
 
